# storeconnect-timesync-cpp-client

./: .gitignore  CMakeLists.txt  Readme.md
android_wrapper/: Readme.md  settings.gradle
android_wrapper/gradle/wrapper/: gradle-wrapper.properties
android_wrapper/sample/: build.gradle
android_wrapper/sample/src/androidTest/java/com/ubudu/sample/: ExampleInstrumentedTest.kt
android_wrapper/sample/src/main/: AndroidManifest.xml
android_wrapper/sample/src/main/java/com/ubudu/sample/: MainActivity.kt
android_wrapper/sample/src/test/java/com/ubudu/sample/: ExampleUnitTest.kt
android_wrapper/serverdate/: CMakeLists.txt  build.gradle
android_wrapper/serverdate/src/androidTest/java/com/ubudu/serverdate/: ExampleInstrumentedTest.java
android_wrapper/serverdate/src/main/: AndroidManifest.xml
android_wrapper/serverdate/src/main/cpp/: server_date_native.i
android_wrapper/serverdate/src/main/cpp/wrapper/: http_get_interface.java  server_date.java  server_date_nativeJAVA_wrap.cxx  server_date_nativeJAVA_wrap.h  server_date_native_Wrapper.java  server_date_native_WrapperJNI.java
android_wrapper/serverdate/src/main/java/com/ubudu/serverdate/: ServerDate.java
android_wrapper/serverdate/src/main/java/com/ubudu/serverdate/core/: server_date_native_WrapperConstants.java
android_wrapper/serverdate/src/main/res/values/: strings.xml
android_wrapper/serverdate/src/test/java/com/ubudu/serverdate/: ExampleUnitTest.java
node_server_date/: package.json  server.js
server_date/: CMakeLists.txt
server_date/src/: easyhttp_get.cpp  easyhttp_get.h  http_get_interface.cpp  http_get_interface.h  models.h  server_date.cpp  server_date.h
tests/: CMakeLists.txt  test_utils.h
tests/server_date_tests/: CMakeLists.txt  server_date_tests.cpp
